# rotlinedet-gpu

./: .gitignore  CMakeLists.txt  Makefile  README.md  linedet.cpp  linedet.hpp  loadimg.py  main.cpp  test_columnsum.cpp
google_tests/: CMakeLists.txt  coordinates_tests.cpp  linedet_tests.cpp
include/: LineDetector.hpp  RunParams.hpp  arrays.hpp  coordinates.hpp  linedet.hpp
src/: CMakeLists.txt  LineDetector.cpp  RunParams.cpp  arrays.cpp  coordinates.cpp  linedet.cpp  linedet.hpp  main.cpp  test_columnsum.cpp
src/scripts/: rotations.py
